Changed the colour and fixes the spacing between logo and text

--- a/css/home.css
+++ b/css/home.css
@@ -113,9 +113,9 @@ Hover behavior
 
 /* --- Login Button --- */
 .btn-login {
-    background-color: transparent;
-    color: #ffcc00;
-    border: 2px solid #ffcc00;
+    background-color: #ff9933;
+    color: white;
+    border: 2px solid transparent;
     transition: all 0.3s ease;
 }
 
